# PhoenixCore-

./: .gitignore  .gitmodules  .replit  AGENTS.md  BootForge-Linux-x64.spec  BootForge-Windows.spec  BootForge-macOS.spec  BootForge.spec  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LEGACY.md  LICENSE  OPTIMIZATION_REPORT.md  README.md  Vercel  affirmations.prompt.yml  bootforge-standalone.py  build_cross_platform.py  build_packages.py  create_recovery_usb.py  install-windows.bat  main.py  pyproject.toml  replit.md  requirements.txt  usb-installer.bat  web_server.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  epic.md  feature_request.yml  task.md
.github/agents/: agents.md  copilot-instructions.md  my-agent.agent.md
.github/instructions/: build-system.instructions.md  patch-pipeline.instructions.md  tests.instructions.md
.github/workflows/: ci-windows.yml  ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
archive/old_builds/: BootForge-Windows.spec
archive/old_installers/: usb-installer.sh
assets/brand/phoenix-forge/: tokens.css  tokens.json
attached_assets/: Pasted--47-39-src-core-win-patch-engine-INFO-DISM-C-Windows-System32-DISM-exe-WimLib-None-2025-0-1759204072724_1759204072725.txt  Pasted-INFO-Building-EXE-from-EXE-00-toc-completed-successfully-52585-INFO-Build-complete-The-results--1759204085613_1759204085613.txt  Pasted-PS-D-BootForgeOS-cd-build-system-PS-D-BootForgeOS-build-system-python-build-system-debug-build--1759205763071_1759205763072.txt  Pasted-obg-Robs-iMac-BootForgeOS-pip3-install-pyinstaller-Defaulting-to-user-installation-because-normal--1757883544725_1757883544726.txt  Pasted-robg-Robs-iMac-curl-fsSL-http-64df6ecc-b2b6-4249-92a3-a7954138dd1d-00-1yjprj56yguoo-kirk-repl-1757892217211_1757892217212.txt  content-1759280215410.md
bootable_usb/: README.txt  Start-BootForge-Linux.sh  Start-BootForge-Mac.command  Start-BootForge-Windows.bat  autorun.inf
bootable_usb/BootForge/: AGENTS.md
bootable_usb/BootForge/src/gui/: main_window.py
bootable_usb/EFI/BOOT/: BOOTX64.EFI  startup.nsh
bootable_usb/Tools/: disk_utility.sh  system_info.sh
bootcamp/: README.md
bootloaders/phoenix-bootloader/: README.md
build_system/: build_all.py  debug_build.py  pyinstaller_config.py  simple_build.py  usb_toolkit_builder.py
build_system/specs/: bootforge_linux.spec
configs/patches/: macos_universal.yaml
crates/bootloader-core/: Cargo.toml
crates/bootloader-core/src/: lib.rs
crates/content/: Cargo.toml
crates/content/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/fs-fat32/: Cargo.toml
crates/fs-fat32/src/: lib.rs
crates/host-linux/: Cargo.toml
crates/host-linux/src/: lib.rs
crates/host-macos/: Cargo.toml
crates/host-macos/src/: lib.rs
crates/host-windows/: Cargo.toml
crates/host-windows/src/: format.rs  format_stub.rs  lib.rs  space.rs  space_stub.rs  volumes.rs  win.rs
crates/imaging/: Cargo.toml
crates/imaging/src/: lib.rs
crates/legacy-patcher/: Cargo.toml
crates/legacy-patcher/src/: lib.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/report/: Cargo.toml
crates/report/src/: lib.rs
crates/safety/: Cargo.toml
crates/safety/src/: lib.rs
crates/wim/: Cargo.toml
crates/wim/src/: lib.rs
crates/workflow-engine/: Cargo.toml
crates/workflow-engine/src/: lib.rs
desktop/tauri-app/src-tauri/src/drives/: mod.rs
desktop/tauri-app/src-tauri/src/drives/files/desktop/tauri-app/src-tauri/src/: main.rs
desktop/tauri-app/src-tauri/src/drives/files/desktop/tauri-app/src-tauri/src/drives/: linux.rs  macos.rs  mod.rs  windows.rs
desktop/tauri-app/src-tauri/src/drives/files/runtime/manifests/: phoenix-catalog.json
desktop/tauri-app/src-tauri/src/drives/files/usb_layout/docs_on_usb/: index.html
docs/: ARCHITECTURE.md  ROADMAP.md  VISION.md  WAVE7_REAL_IMPLEMENTATIONS.md  WAVE8_REAL_INTEGRATIONS.md  contribution-rules.md  core-contracts.md  device-graph.md  no-wrapper-policy.md  oclp_integration.md  phoenix_key_legendary_blueprint.md  supplier-matrix.md
docs/cursor-issues/: epic-001-replace-third-party-tooling.md  task-001-supplier-matrix.md  task-002-core-contracts.md  task-003-windows-enumeration.md  task-004-safety-engine.md  task-005-imaging-read-probe.md  task-006-evidence-reports.md  task-007-windows-installer-usb-workflow.md  task-008-ci-windows.md  task-009-docs-no-wrapper-policy.md
docs/cursor-projects/: supplier-replacement-board.md
docs/phoenix_brand/: phoenix_forge.md
docs/schemas/: pack.schema.json  workflow.schema.json
issues/: epic_replace_tooling.md  task_core_contracts_providers_workflows.md
pull_requests/: 27_status.json
pulls/: 27.md
src/: oclp_launcher.py
src/cli/: cli_interface.py  recovery_cli.py
src/core/: config.py  disk_manager.py  error_prevention_recovery.py  hardware_detector.py  hardware_matcher.py  hardware_profiles.py  logger.py  models.py  oclp_integration.py  oclp_pipeline_integration.py  oclp_safety_controller.py  patch_config_loader.py  patch_pipeline.py  platform_utils.py  safety_validator.py  system_monitor.py  usb_builder.py  vendor_database.py  win_patch_engine.py
src/core/providers/: linux_provider.py  macos_provider.py  windows_provider.py
src/gui/: log_viewer.py  main_window.py  modern_theme.py  oclp_target_config.py  oclp_wizard.py  os_image_widget.py  status_widget.py  stepper_header.py  stepper_wizard.py  stepper_wizard_widget.py  usb_recipe_manager.py  wizard_widget.py
src/imaging/: __init__.py  cold_fuse.py
src/installers/: build_installer.py
src/plugins/: diagnostics.py  driver_injector.py
src/recovery/: __init__.py  clone.py  core.py  detect.py  diagnostics.py  linux_repair.py  macos_repair.py  mount.py  validators.py  windows_repair.py
tests/: test_hardware_detection.py
usb_toolkit/: README.txt
usb_toolkit/sync/: sync_config.json
