[workspace]
members = [
    "crates/core",
    "crates/content",
    "crates/fs-fat32",
    "crates/host-linux",
    "crates/host-macos",
    "crates/host-windows",
    "crates/imaging",
    "crates/wim",
    "crates/report",
    "crates/safety",
    "crates/workflow-engine",
    "apps/cli"
]
resolver = "2"