[package]
name = "phoenix-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.54", features = ["derive"] }
serde_json = "1"
phoenix-host-windows = { path = "../../crates/host-windows" }
phoenix-report = { path = "../../crates/report" }
phoenix-imaging = { path = "../../crates/imaging" }
phoenix-workflow-engine = { path = "../../crates/workflow-engine" }
phoenix-wim = { path = "../../crates/wim" }
phoenix-content = { path = "../../crates/content" }
phoenix-core = { path = "../../crates/core" }
phoenix-host-linux = { path = "../../crates/host-linux" }
phoenix-host-macos = { path = "../../crates/host-macos" }
phoenix-legacy-patcher = { path = "../../crates/legacy-patcher" }