[package]
name = "phoenix-content"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
phoenix-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Storage_Vhd"
] }
