[package]
name = "bootforge-host-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
bootforge-core = { path = "../core" }
anyhow = "1"
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Wmi",
    "Win32_Storage_FileSystem",
    "Win32_Devices_DeviceAndDriverInstallation"
]}
