[package]
name = "phoenix-host-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
phoenix-core = { path = "../core" }
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Ioctl",
    "Win32_System_Ioctl",
    "Win32_Security"
]}
