[package]
name = "phoenix-report"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
phoenix-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "serde"] }
