[package]
name = "phoenix-workflow-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
phoenix-core = { path = "../core" }
phoenix-content = { path = "../content" }
phoenix-host-windows = { path = "../host-windows" }
phoenix-imaging = { path = "../imaging" }
phoenix-host-linux = { path = "../host-linux" }
phoenix-host-macos = { path = "../host-macos" }
phoenix-report = { path = "../report" }
phoenix-safety = { path = "../safety" }
phoenix-wim = { path = "../wim" }
serde_json = "1"
sha2 = "0.11.0-rc.3"
